--- a/public/style/header.css
+++ b/public/style/header.css
@@ -5,10 +5,46 @@
   font-family: sans-serif;
 }
 
-header {
+.header {
   background-color: #fff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+
 }
+  /*------------------------------------------------*/
+  .www {
+      padding-top: 112px;
+}
+
+/*.www img {*/
+/*    width: 100%;*/
+/*    height: auto;*/
+/*}*/
+
+.info {
+    position: absolute;
+    content: "";
+    top: 237px;
+    left: 0;
+    /*transform: translate(-50%, -50%);*/
+    margin-left: 50px;
+   
+    
+}
+  
+  
+  .box__btn{
+      width:100%;
+        display: flex;
+        justify-content: center;
+         align-items: center;
+        margin-top: 55px;
+        
+  }
+  
+  .btn02{
+      display:none;
+      margin:0 auto;
+  }
 
 .nav_menu {
   list-style: none;
@@ -30,6 +66,7 @@ header {
 }
 
 .navbar {
+    top:0;
   min-height: 70px;
   display: flex;
   justify-content: space-between;
@@ -40,7 +77,7 @@ header {
   background-color: #fff;
   position: fixed;
 }
-}
+
 
 .nav_menu {
   display: flex;
@@ -123,18 +160,18 @@ header {
   object-fit: cover;
 }
 
-.slider .slide .info {
-  position: absolute;
-  color:  #323232 ;
-  width: 100%;
+/* .info {*/
+/*  position: absolute;*/
+/*  color:  #323232 ;*/
+/*  width: 100%;*/
 
-  margin-top: 150px;
-  margin-left: 50px;
-  padding: 20px;
-  border-radius: 5px;
-}
+/*  margin-top: 150px;*/
+/*  margin-left: 50px;*/
+/*  padding: 20px;*/
+/*  border-radius: 5px;*/
+/*}*/
 
-.slider .slide .info p {
+ .info p {
   font-size: 40px;
   font-weight: 100;
   line-height: 1.5;
@@ -146,7 +183,7 @@ header {
   margin-top: 50px;
   border: none;
   background-color: #4b4b4b;
-  border-radius: 4px;
+  /*border-radius: 4px;*/
   cursor: pointer;
 }
 
@@ -229,6 +266,11 @@ header {
 
 
 @media (max-width: 1200px) {
+    
+  
+    
+    
+    
   .hamburger {
     display: block;
     display: flex;
@@ -277,7 +319,7 @@ header {
     z-index: 10;
   }
 
-  .slider .slide .info p{
+   .info p{
     font-size: 30px;
   }
   
@@ -296,16 +338,23 @@ header {
 }
 
 @media (max-width: 900px) {
+    
+    
+    .info{
+        top:200px;
+    }
+    
+    .btn{
+        margin-top:20px;
+    }
+ 
+    
+    
   .slider {
     width: 100%;
   }
 
-  .slider .slide .info {
-    position: relative;
-    /* width: 80%; */
-    margin-left: auto;
-    margin-right: auto;
-  }
+
   
    .icon{
     display: block;
@@ -318,10 +367,30 @@ header {
 }
 
 @media (max-width:768px){
-  .btn{
-    width: 140px;
-    padding: 15px;
+    
+     .btn{
+      display:none;
+      /*margin-top:10px;*/
   }
+    
+    .info{
+        /*top:111px;*/
+        margin-left:24px;
+    }
+  
+    
+  /*.btn{*/
+  /*  width: 140px;*/
+  /*  padding: 15px;*/
+  /*  margin-top: 10px;*/
+
+  /*}*/
+  
+  .btn02{
+      display:block;
+  }
+  
+ 
 
   .btn a{
     font-size: 15px;
@@ -330,24 +399,35 @@ header {
 .navbar{
   padding: 30px 16px;
 }
+
+.info p {
+    font-size: 20px;
+  }
  
 
 }
 
 @media (max-width: 500px) {
-  .slider .slide .info h2 {
-    font-size: 1.8em;
-    line-height: 40px;
-  }
+  /*.slider .slide .info h2 {*/
+  /*  font-size: 1.8em;*/
+  /*  line-height: 40px;*/
+  /*}*/
+   
 
-  .slider .slide .info p {
-    font-size: 20px;
+
+  .info p {
+    font-size: 12px;
   }
 
   .nav_branding img{
     width: 200px;
   }
 
+  .info{
+        top:163px;
+       
+    }
+  
   
 
 
@@ -380,5 +460,5 @@ header {
 .icon_0003 img {
     width: 53px;
     height: 53px;
-    border-radius: 50%;
+    /*border-radius: 50%;*/
 }
