--- a/public/style/main2.css
+++ b/public/style/main2.css
@@ -55,19 +55,21 @@
 }
 
 @media (max-width: 1200px) {
-  .tools_box {
-    display: block;
-  }
-
-  .tools_img {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  .tools_text {
-    width: 100%;
-    margin-bottom: 10px;
-  }
+  .tools .item-1 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .tools_box {
+        display: block;
+    }
+    .tools_img {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .tools_text {
+        width: 100%;
+        margin-bottom: 10px;
+    }
 }
 
 @media (max-width: 900px) {
